--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,11 @@
+<% if @task.errors.any? %>
+<ul>
+    <% @task.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+<% end %>
+
 <%= form_for :task, url: tasks_path do |f| %>
   <p>
     <%= f.label :name %><br>
@@ -7,6 +15,11 @@
   <p>
     <%= f.label :body %><br>
     <%= f.text_area :body %>
+  </p>
+
+  <p>
+    <%= f.label :priority %><br>
+    <%= f.number_field(:priority, in: 1.0..20.0, step: 1) %>
   </p>
  
   <p>
