--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @tasks.each do |task| %>
 	<div class="task">
+		<%= task.priority %>
 		<div class="task_name">
 			<%= task.name %>
 		</div>
