--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,16 @@
 
 <h2>XTask</h2>
 
+<% if current_user.present? %>
+	Welcome <%= current_user.email %>! | 
+	<%= link_to 'Sign out', logout_path %>
+<% else %>
+	<%= link_to 'Register', new_user_path %>
+	<%= link_to 'Sign in', login_path %>
+<% end %>
+
 <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
