--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,78 @@
  *= require_tree .
  *= require_self
  */
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+ * {
+ 	font-family: Open Sans, sans-serif;
+ 	font-size: 1em;
+ 	margin: 0;
+ 	padding: 0;
+ 	box-sizing: border-box;
+ }
+
+ .right {
+ 	float: right;
+ }
+
+ .left {
+ 	float: left;
+ }
+
+ .notification {
+ 	width: 500px;
+ 	padding: 15px;
+ 	margin: 0 auto;
+ 	text-align: center;
+ 	border: solid 1px #ccc;
+ 	background: #eee;
+ }
+
+#header {
+	color: white;
+	margin: 0;
+	padding: 1em;
+	background: #313131;
+	width: 100%;
+	height: 75px;
+	display: inline-block;
+	box-shadow: 0px 0px 5px #555;
+}
+
+#nav-bar {
+	line-height: 75px;
+}
+
+#header a {
+	color: white;
+}
+
+#header a:hover {
+	color: #aaa;
+}
+
+#content {
+	padding: 1em;
+}
+
+h2 {
+	font-size: 2em;
+}
+
+h4 {
+	font-size: 1.5em;
+	margin-bottom: 10px;
+}
+
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #666;
+}
+
+
