--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <div id="header">
 	<div class="left" id="logo">
-		<h2>XTask</h2>
+		<h2><%= link_to 'XTask', root_url %></h2>
 	</div>
 
 	<div class="right" id="nav-bar">
