--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -19,9 +19,14 @@
 
   <p>
     <%= f.label :priority %><br>
-    <%= f.number_field(:priority, in: 1.0..20.0, step: 1) %>
+    <%= f.number_field(:priority, in: 1..20, step: 1) %>
   </p>
- 
+
+  <p>
+    <%= f.label :deadline %><br>
+    <%= f.date_field(:deadline) %>
+  </p>
+  
   <p>
     <%= f.submit %>
   </p>
