--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,17 +1,47 @@
 <h4>Tasks</h4>
 
+<table>
+	<thead>
+		<tr>
+			<th>#</th>
+			<th>Priority</th>
+			<th>Name</th>
+			<th>Description</th>
+			<th>Owner</th>
+			<th>Deadline</th>
+		</tr>
+	</thead>
+	<tbody>
+
 <% @tasks.each do |task| %>
-	<div class="task">
-		<%= task.priority %>
-		<div class="task_name">
+	<tr onclick="document.location ='<%= task_path(task) %>'">
+		<td class="center"><%= task.id %></td>
+		<td class="center"><%= task.priority %></td>
+		<td>
 			<%= task.name %>
-		</div>
-		<div class="task_body">
+		</td>
+		<td>
 			<%= task.body %>
-		</div>
-	</div>
+		</td>
+		<td>
+			<% if task.user %>
+				<%= task.user.email %>
+			<% else %>
+				Anonymous
+			<% end %>
+		</td>
+		<td>
+			<% if task.deadline %>
+				<%= task.deadline.strftime("%d/%m/%Y") %>
+			<% end %>
+		</td>
+	</tr>
 <% end %>
+	</tbody>
+</table>
 
 <br />
 
-<%= link_to 'New task', new_task_path %>
+<% if current_user.present? %>
+	<%= link_to 'New task', new_task_path %>
+<% end %>
