Added progress bar

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -23,6 +23,11 @@
   </p>
 
   <p>
+    <%= f.label :progress %><br>
+    <%= f.number_field(:progress, in: 1..100, step: 1) %>
+  </p>
+
+  <p>
     <%= f.label :deadline %><br>
     <%= f.date_field(:deadline) %>
   </p>
