--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -2,6 +2,27 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.progress {
+  margin: 0 auto;
+  width: 200px;
+  padding: 1px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+}
+
+.bar {
+  width: 0%;
+  background-color: #f64a0f;
+  font-size: 0.8em;
+  line-height: 25px;
+  height: 25px;
+  text-shadow: 0px 1px 2px #000;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.01));
+  transition: 0.5s linear;
+  transition-property: width, background-color;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
+}
 
 table {
 	font-size: 0.8em;
@@ -18,6 +39,10 @@ th, td {
 
 tbody > tr:hover {
 	background-color: #eee;
+}
+
+td#progress {
+	color: white;
 }
 
 td.center {
