--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,4 +5,6 @@
 
 <br />
 
+
+<%= link_to	'Delete', task_path(@task), method: :delete, data: { confirm: 'Are you sure?' } %> | 
 <%= link_to 'Back', tasks_path %>
