--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,10 @@
 <h2>Tasks</h2>
 
+<%= form_tag tasks_path, :method => 'get', :class => 'right' do %>
+	<%= search_field_tag :search, params[:search] %>
+	<%= submit_tag "Search" %>
+<% end %>
+
 <table>
 	<thead>
 		<tr>
