--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,61 +1,14 @@
 <h2>Tasks</h2>
 
-<%= form_tag tasks_path, :method => 'get', :class => 'right' do %>
+<%= form_tag tasks_path, :method => 'get',:id => 'tasks_search', :class => 'right' do %>
 	<%= search_field_tag :search, params[:search] %>
-	<%= submit_tag "Search" %>
+	<%= submit_tag "Search", :name => nil %>
 <% end %>
 
-<table>
-	<thead>
-		<tr>
-			<th>#</th>
-			<th>Name</th>
-			<th>Description</th>
-			<th>Owner</th>
-			<th>Deadline</th>
-			<th>Priority</th>
-			<th>Progress</th>
-		</tr>
-	</thead>
-	<tbody>
-
-<% @tasks.each do |task| %>
-	<tr onclick="document.location ='<%= task_path(task) %>'">
-		<td class="center"><%= task.id %></td>
-
-		<td>
-			<%= task.name %>
-		</td>
-		<td>
-			<%= task.body %>
-		</td>
-		<td>
-			<% if task.creator %>
-				<a href='<%= user_path(task.creator) %>'><%= task.creator.email %></a>
-			<% else %>
-				Anonymous
-			<% end %>
-		</td>
-		<td>
-			<% if task.deadline %>
-				<%= task.deadline.strftime("%d/%m/%Y") %>
-			<% end %>
-		</td>
-		<td id="priority" class="center">
-			<%= task.priority %>
-		</td>
-		<td id="progress" class="center">
-			<div class="progress">
-				<div class="bar"><span><%= (task.progress.present?)? task.progress : 0 %></span></div>
-			</div>
-		</td>
-	</tr>
-<% end %>
-	</tbody>
-</table>
+<div id="tasks"><%= render 'tasks' %></div>
 
 <br />
 
 <% if current_user.present? %>
-	<%= link_to 'New task', new_task_path %>
+	<%= link_to 'New task', new_task_path, :class => 'button' %>
 <% end %>
