--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,19 +1,13 @@
-<h2>Task</h2>
+<h2><%= @task.name %></h2>
 
 <div id="content">
-	<h5>Title</h5>
-	<%= @task.name %>
-
-	<br />
-
-	<h3>Task</h3>
-	<%= @task.body %>
+	<p><%= @task.body %></p>
 </div>
 
 <div class="button-group">
-		<% if @task.creator == current_user %>
-		<%= link_to	'Edit', edit_task_path(@task) %>
-		<%= link_to	'Delete', task_path(@task), method: :delete, data: { confirm: 'Are you sure?' } %>
-		<% end %>
-		<%= link_to 'Back', tasks_path, class: 'button-primary' %>
-	</div>
+	<%= link_to 'Back', tasks_path, class: 'button' %>
+	<% if @task.creator == current_user %>
+		<%= link_to	'Edit', edit_task_path(@task), class: 'button' %>
+		<%= link_to	'Delete', task_path(@task), method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
+	<% end %>		
+</div>
