--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,4 +122,84 @@ input {
 	color: #ddd;
 }
 
+/* Table */
+table {
+	font-size: 0.8em;
+	margin: 0 auto;
+	border-collapse: collapse;
+  text-align: center;
+}
 
+th, td {
+	border-bottom: solid 1px;
+	border-color: #eee;
+	padding: 5px;
+}
+
+td.center {
+	text-align: center;
+}
+
+/* Form */
+.input-form {
+	width: 340px;
+	margin: 0 auto;
+}
+
+.input-form span {
+	font-size: 12px;
+	color: darkgray;
+}
+
+.input-form fieldset {
+	border: none;
+	margin: 0;
+	padding: 10px 0;
+}
+
+.input-form label {
+	text-align: right;
+	display: inline-block;
+	vertical-align: middle;
+	width: 100px;
+	margin-right: 1em;
+}
+
+.input-form input {
+	width: 180px;
+	padding: 4px 5px;
+	vertical-align: middle;
+	border: none;
+	border-bottom: solid 1px #ccc;
+}
+
+.input-form .field_with_errors {
+	display: inline-block;
+}
+
+.input-form .field_with_errors input {
+	border-bottom: solid 1px red;
+}
+
+.input-form input[type=submit] {
+	width: auto;
+	padding: 6px 12px;
+	cursor: pointer;
+}
+
+.input-form .task_progress_input[type=range] {
+	width: 130px;
+}
+
+.input-form .task_progress_input[type=number] {
+	width: 40px;
+}
+
+.input-form .input-group {
+	margin-bottom: 15px;
+}
+
+.input-controls {
+	width: 100%;
+	text-align: center;
+}
