--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,6 +1,7 @@
-// Place all the styles related to the tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+table#tasks_table{
+  width: 95%;
+  text-align: left;
+}
 
 .progress {
   margin: 0 auto;
@@ -24,27 +25,10 @@
   box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
 }
 
-table {
-	font-size: 0.8em;
-	margin: 0 auto;
-	width: 95%;
-	border-collapse: collapse;
-}
-
-th, td {
-	border-bottom: solid 1px;
-	border-color: #eee;
-	padding: 5px;
-}
-
-tbody > tr:hover {
-	background-color: #eee;
-}
-
 td#progress {
 	color: white;
 }
 
-td.center {
-	text-align: center;
+table#tasks_table > tbody > tr:hover {
+  background-color: #eee;
 }
