--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,7 +55,7 @@
 #header {
 	color: white;
 	margin: 0;
-	padding: 1em;
+	padding: 1.2em 1em 0 1em;
 	background: #313131;
 	width: 100%;
 	height: 75px;
