Add file upload

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,28 +3,44 @@
 <div id="content">
 	<p><%= @task.progress %>%</p>
 	<p><%= @task.body %></p>
-	
+
+	<div class="separator"></div>
+	<h3 class="collapsable clickable">Files</h3>
+	<div class="collapsable hidden">
+		<p>Add file to task</p>
+		<%= form_for @task do |f| %>
+			<%= f.file_field :file %>
+		<% end %>
+	</div>
+
+	<div class="separator"></div>
+	<h3 class="collapsable clickable">People</h3>
+	<div class="collapsable hidden">
+	</div>
+
 	<div class="separator"></div>
 
-	<h3>Sub-tasks</h3>
-	<% @task.subtasks.each do |subtask| %>
-	<p><label>Name:</label> <%= subtask.name %> <label>Body:</label> <%= subtask.body %></p>
-	<% end %>
+	<h3 class="collapsable clickable">Sub-tasks</h3>
+	<div class="collapsable hidden">
+		<% @task.subtasks.each do |subtask| %>
+		<p><label>Name:</label> <%= subtask.name %> <label>Body:</label> <%= subtask.body %></p>
+		<% end %>
 
-	<div class="input-form">
-	<h4>Add new sub-task</h4>
-	<%= form_for (@subtask = @task.subtasks.new) do |f| %>
-		<fieldset>
-		<div class="input-group">
-			<%= f.hidden_field :parent_id, :value => @subtask.parent.id %>
-			<%= f.label :name, :class => 'small' %>
-			<%= f.text_field :name %>
+		<div class="input-form">
+		<h4>Add new sub-task</h4>
+		<%= form_for (@subtask = @task.subtasks.new) do |f| %>
+			<fieldset>
+			<div class="input-group">
+				<%= f.hidden_field :parent_id, :value => @subtask.parent.id %>
+				<%= f.label :name, :class => 'small' %>
+				<%= f.text_field :name %>
+			</div>
+			<div class="input-controls">
+				<%= f.submit %>
+			</div>
+			</fieldset>
+		<% end %>
 		</div>
-		<div class="input-controls">
-			<%= f.submit %>
-		</div>
-		</fieldset>
-	<% end %>
 	</div>
 </div>
 
@@ -35,4 +51,3 @@
 		<%= link_to	'Delete', task_path(@task), method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
 	<% end %>		
 </div>
-
