--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,6 +43,10 @@
  	font-size: 1rem;
  }
 
+ .hidden {
+ 	display: none;
+ }
+
  .notification {
  	width: 500px;
  	margin: 0 auto;
@@ -99,6 +103,11 @@ h2 {
 
 h3 {
 	font-size: 1.2em;
+}
+
+h3.clickable {
+	display: inline-block;
+	cursor: pointer;	
 }
 
 
