--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,9 +7,14 @@
 	<div class="separator"></div>
 	<h3 class="collapsable clickable">Files</h3>
 	<div class="collapsable hidden">
+		<% @task.files.each do |file| %>
+		<p><label>Name:</label> <%= file.name %></p>
+		<% end %>
+
 		<p>Add file to task</p>
 		<%= form_for @task do |f| %>
-			<%= f.file_field :file %>
+			<%= f.file_field :files %>
+			<%= f.submit 'Upload' %>
 		<% end %>
 	</div>
 
